Issue #SB-8828 fix: Scrollbar height issue fixed

--- a/org.ekstep.questionbank-1.0/editor/style.css
+++ b/org.ekstep.questionbank-1.0/editor/style.css
@@ -73,9 +73,8 @@
 }
 
 .qb-question-bank .content.wizard {
-    height: 80vh;
+    height: 90vh;
     padding: 0;
-    overflow-y: auto;
 }
 
 .qb-questions-list {
@@ -111,11 +110,16 @@
 }
 
 .qb-question-list-container {
-    height: 67vh;
-    padding-bottom: 15%;
+    height: calc(90vh - 135px);
+    padding-bottom: 10px;
     overflow-y: auto;
 }
 
+.qb-selected-question-list-container {
+    height: calc(90vh - 190px);
+    padding-bottom: 10px;
+    overflow-y: auto;
+}
 .quesSelector {
     border: 1px solid #2e9fd9 !important;
     border-radius: 4px !important;
